fixed publications margin  on mobile

--- a/src/components/Publications.css
+++ b/src/components/Publications.css
@@ -29,10 +29,6 @@
 
 @media screen and (max-width: 940px) {
 
-    .Publications {
-        margin-bottom: 10rem;
-    }
-
     .Publications h2 {
         text-align: center;
     }
